<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filterFrame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollHorizontally="true"
        android:text="@string/txtPrice"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hintFrom"
        android:inputType="number" />

    <EditText
        android:id="@+id/to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hintTo"
        android:inputType="number"
        android:scrollHorizontally="true" />

    <ImageButton
        android:id="@+id/filterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/desFilterButton"
        android:src="@drawable/action_search" />

    <Button
        android:id="@+id/allBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtAllBtn" />

</LinearLayout>