<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <!-- HorizontialListView for images of products -->

    <view.HorizontialListView
        android:id="@+id/listImgPathView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="3dp" />
    
    <ScrollView
        android:id="@+id/scrollDetail"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:fillViewport="true"
        android:padding="1dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:stretchColumns="1" >

            <!-- Row0 : id and codeName -->

            <TableRow>

                <TextView
                    android:id="@+id/idTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="1"
                    android:text="@string/pCodeName"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pCodeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_span="2"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:textColor="#000000" />
            </TableRow>

            <!-- Row1 : product name, is hot ? -->

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:scrollHorizontally="true"
                    android:text="@string/pName"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/isHotChk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:clickable="false"
                    android:text="Hot"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Row2 : product price, quantity -->

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/pPrice"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:numeric="decimal"
                    android:scrollHorizontally="true"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/pQuantity"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pQuanTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:numeric="integer"
                    android:textColor="#000000" />
            </TableRow>

            <!-- Row3 :  Detail -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/pDetail"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pDetailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="top|left"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textColor="#000000" />

            <TableRow android:gravity="center" >

                <Button
                    android:id="@+id/pEditBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:enabled="false"
                    android:layout_column="0"
                    android:text="@string/btnEdit" />

                <Button
                    android:id="@+id/pSaveBtn"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:enabled="true"
                    android:text="@string/btnSave" />

                <Button
                    android:layout_column="2"
                    android:layout_span="2"
                    android:id="@+id/pShareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:enabled="false"
                    android:text="@string/btnShare" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>